--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
         </div>
     </header>
     <main>
-        <div>
-            <ul type="disc">
+        <div class="list">
+            <ul type="square">
                 <li>List Of Programs</li>
                 <li>Factorial</li>
                 <li>Plaindrome</li>
                 <li>Matrix Multiplication</li>
                 <li>Strassen's Matrix Multiplication</li>
-            </ol>
+            </ul>
+            <div>
+                <button class="button" role="button">BEGIN</button>
+            </div>
         </div>
-        <button class="button" role="button">BEGIN</button>
     </main>
     <footer>
         <div class="footer">Algorithms</div>
