--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <div class="list">
             <ul type="square">
                 <li>List Of Programs</li>
-                <li>Factorial</li>
-                <li>Plaindrome</li>
+                <li><a href="factorial/index.html">Factorial</a></li>
+                <li> <a href="fibonachi/">Fibonachi</a></li>
+                <li> <a href="Palindrome/">Plaindrome</a></li>
                 <li>Matrix Multiplication</li>
                 <li>Strassen's Matrix Multiplication</li>
             </ul>
