Update index.html P to p

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li>List Of Programs</li>
                 <li><a href="factorial/index.html">Factorial</a></li>
                 <li> <a href="fibonachi/">Fibonachi</a></li>
-                <li> <a href="Palindrome/">Plaindrome</a></li>
+                <li> <a href="palindrome/">Plaindrome</a></li>
                 <li>Matrix Multiplication</li>
                 <li>Strassen's Matrix Multiplication</li>
             </ul>
